--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
-  <%= link_to "Log Out" %>
+  <%= link_to "Log Out", logout_path %>
 <% else %>
-  <%= link_to "Register as a User", new_user_path %>
-  <%= link_to "I already have an account", login_path %>
+  <%= link_to "Create an Account", new_user_path %>
+  <%= link_to "Login", login_path %>
 <% end %>
