--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,7 @@
   <%= form.text_field :email %>
   <%= form.label :password, 'Password:' %>
   <%= form.password_field :password %>
+  <%= form.label :password_confirmation, 'Password:' %>
+  <%= form.password_field :password_confirmation %>
   <%= form.submit 'Create User' %>
 <% end %>
