--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
   <head>
     <title>EncounterSimFe</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,9 +15,36 @@
     <%= javascript_importmap_tags %>
   </head>
 
+  
   <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand"</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"></li>
+      <li><a href="/">Home</a></li>
+      <li><a href= "/monsters" >Monsters</a></li>
+      <% if current_user %>
+        <li><a href= "/logout">Log Out</a></li>
+      <% else %>
+      <li><a href= "/login" >Log In</a></li>
+    <% end %>
+    </ul>
+  </div>
+</nav>
+
     <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, class: name %>
+      <% if name == "error" %>
+        <div class="alert alert-danger">
+          <center><strong><%= content_tag :div, msg, class: name %><strong></center>
+        </div>
+      <% elsif name == "success" %>
+        <div class="alert alert-success">
+          <center><strong><%= content_tag :div, msg, class: name %><strong></center>
+        </div>
+      <% end %>
     <% end %>
     <%= yield %>
   </body>
