--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,14 +1,17 @@
+<div class="jumbotron text-center">
 <h1>Login</h1>
+</div>
 
+<div class="text-center">
+  <!-- Login Form -->
+  <%= form_with url: login_path, method: :post do |form| %>
+    <%= form.label :email, "Email" %><br>
+    <%= form.text_field :email %><br><br>
+    <%= form.label :password, "Password" %><br>
+    <%= form.password_field :password %><br><br>
+    <%= form.submit "Login" %>
+  <% end %>
 
-<!-- Login Form -->
-<%= form_with url: login_path, method: :post do |form| %>
-  <%= form.label :email, "Email:" %>
-  <%= form.text_field :email %>
-  <%= form.label :password, "Password:" %>
-  <%= form.password_field :password %>
-  <%= form.submit "Login" %>
-<% end %>
-
-<!-- Link to Create Account -->
-<p>Don't have an account? <%= link_to "Create Account", new_user_path %></p>
+  <!-- Link to Create Account -->
+  <br><p>Don't have an account? <%= link_to "Create Account", new_user_path %></p>
+</div>
