--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,15 @@
+<div class="jumbotron text-center">
 <h1>Create an Account</h1>
+</div>
 
+<div class="text-center">
 <%= form_with model: @user do |form| %>
-  <%= form.label :email, 'Email:' %>
-  <%= form.text_field :email %>
-  <%= form.label :password, 'Password:' %>
-  <%= form.password_field :password %>
-  <%= form.label :password_confirmation, 'Confirm Password:' %>
-  <%= form.password_field :password_confirmation %>
+  <%= form.label :email, 'Email' %><br>
+  <%= form.text_field :email %><br>
+  <%= form.label :password, 'Password' %><br>
+  <%= form.password_field :password %><br>
+  <%= form.label :password_confirmation, 'Confirm Password' %><br>
+  <%= form.password_field :password_confirmation %><br><br>
   <%= form.submit 'Create User' %>
 <% end %>
+</div>
