--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,11 +6,12 @@
 
 
 <div class="text-center">
-<% if current_user %>
-<% else %>
-<h4><%= link_to "Create An Account", new_user_path %></h4>
-<h4><%= link_to "Login", login_path %><h4>
-<% end %>
+  <% if current_user %>
+    <h4><%= button_to "Create a New Encounter", new_encounter_path, method: :get %>    </h4>
+  <% else %>
+    <h4><%= button_to "Create An Account", new_user_path, method: :get %>    </h4>
+    <h4><%= button_to "Login", login_path, method: :get %>    </h4>
+  <% end %>
 </div>
 <br>
 <br>
