--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,10 @@
         <div class="alert alert-success">
           <center><strong><%= content_tag :div, msg, class: name %><strong></center>
         </div>
+      <% else %>
+        <div class="alert alert-info">
+        <center><strong><%= content_tag :div, msg, class: name %><strong></center>
+      </div>
       <% end %>
     <% end %>
     <%= yield %>
