--- a/app/views/encounters/new.html.erb
+++ b/app/views/encounters/new.html.erb
@@ -34,7 +34,7 @@
             <%= select_tag :dexterity_1, options_for_select(@encounter.ability_modifiers) %>
           </div>
           <div class="form-group">
-            <%= form.label :constitution_1, 'Constituion' %>
+            <%= form.label :constitution_1, 'Constitution' %>
             <%= select_tag :constitution_1, options_for_select(@encounter.ability_modifiers) %>
           </div>
           <div class="form-group">
@@ -42,7 +42,7 @@
             <%= select_tag :wisdom_1, options_for_select(@encounter.ability_modifiers) %>
           </div>
           <div class="form-group">
-            <%= form.label :charisma_1, 'Charimsa' %>
+            <%= form.label :charisma_1, 'Charisma' %>
             <%= select_tag :charisma_1, options_for_select(@encounter.ability_modifiers) %>
           </div>
           <div class="form-group">
@@ -55,11 +55,11 @@
             <%= select_tag :spell1_1, options_for_select(@encounter.spell_names) %>
           </div>
           <div class="form-group">
-            <%= form.label :spell2_1, 'Spell 1' %>
+            <%= form.label :spell2_1, 'Spell 2' %>
             <%= select_tag :spell2_1, options_for_select(@encounter.spell_names) %>
           </div>
           <div class="form-group">
-            <%= form.label :spell3_1, 'Spell 1' %>
+            <%= form.label :spell3_1, 'Spell 3' %>
             <%= select_tag :spell3_1, options_for_select(@encounter.spell_names) %>
           </div>
         </div>
@@ -105,7 +105,7 @@
             <%= select_tag :dexterity_2, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :constitution_2, 'Constituion' %>
+            <%= form.label :constitution_2, 'Constitution' %>
             <%= select_tag :constitution_2, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -113,7 +113,7 @@
             <%= select_tag :wisdom_2, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :charisma_2, 'Charimsa' %>
+            <%= form.label :charisma_2, 'Charisma' %>
             <%= select_tag :charisma_2, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -126,11 +126,11 @@
             <%= select_tag :spell1_2, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell2_2, 'Spell 1' %>
+            <%= form.label :spell2_2, 'Spell 2' %>
             <%= select_tag :spell2_2, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell3_2, 'Spell 1' %>
+            <%= form.label :spell3_2, 'Spell 3' %>
             <%= select_tag :spell3_2, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
         </div>
@@ -176,7 +176,7 @@
             <%= select_tag :dexterity_3, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :constitution_3, 'Constituion' %>
+            <%= form.label :constitution_3, 'Constitution' %>
             <%= select_tag :constitution_3, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -184,7 +184,7 @@
             <%= select_tag :wisdom_3, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :charisma_3, 'Charimsa' %>
+            <%= form.label :charisma_3, 'Charisma' %>
             <%= select_tag :charisma_3, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -197,11 +197,11 @@
             <%= select_tag :spell1_3, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell2_3, 'Spell 1' %>
+            <%= form.label :spell2_3, 'Spell 2' %>
             <%= select_tag :spell2_3, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell3_3, 'Spell 1' %>
+            <%= form.label :spell3_3, 'Spell 3' %>
             <%= select_tag :spell3_3, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
         </div>
@@ -247,7 +247,7 @@
             <%= select_tag :dexterity_4, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :constitution_4, 'Constituion' %>
+            <%= form.label :constitution_4, 'Constitution' %>
             <%= select_tag :constitution_4, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -255,7 +255,7 @@
             <%= select_tag :wisdom_4, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :charisma_4, 'Charimsa' %>
+            <%= form.label :charisma_4, 'Charisma' %>
             <%= select_tag :charisma_4, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -268,11 +268,11 @@
             <%= select_tag :spell1_4, options_for_select(@encounter.spell_names, {include_blank: true}), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell2_4, 'Spell 1' %>
+            <%= form.label :spell2_4, 'Spell 2' %>
             <%= select_tag :spell2_4, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell3_4, 'Spell 1' %>
+            <%= form.label :spell3_4, 'Spell 3' %>
             <%= select_tag :spell3_4, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
         </div>
@@ -318,7 +318,7 @@
             <%= select_tag :dexterity_5, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :constitution_5, 'Constituion' %>
+            <%= form.label :constitution_5, 'Constitution' %>
             <%= select_tag :constitution_5, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -326,7 +326,7 @@
             <%= select_tag :wisdom_5, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :charisma_5, 'Charimsa' %>
+            <%= form.label :charisma_5, 'Charisma' %>
             <%= select_tag :charisma_5, options_for_select(@encounter.ability_modifiers), {include_blank: true} %>
           </div>
           <div class="form-group">
@@ -339,11 +339,11 @@
             <%= select_tag :spell1_5, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell2_5, 'Spell 1' %>
+            <%= form.label :spell2_5, 'Spell 2' %>
             <%= select_tag :spell2_5, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
           <div class="form-group">
-            <%= form.label :spell3_5, 'Spell 1' %>
+            <%= form.label :spell3_5, 'Spell 3' %>
             <%= select_tag :spell3_5, options_for_select(@encounter.spell_names), {include_blank: true} %>
           </div>
         </div>
