--- a/app/views/encounters/new.html.erb
+++ b/app/views/encounters/new.html.erb
@@ -12,7 +12,7 @@
       <%= select_tag :monster, options_for_select(@encounter.monster_names) %>
     </div>
 
-    <section class="character1"
+    <section class="character1">
       <div class="form-inline">
         <h3>Character (1)</h3>
         <div class="form-group">
