--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -5,8 +5,8 @@
 <div class="text-center">
   <!-- Login Form -->
   <%= form_with url: login_path, method: :post do |form| %>
-    <%= form.label :email, "Email" %><br>
-    <%= form.text_field :email %><br><br>
+    <%= form.label :username, "Username" %><br>
+    <%= form.text_field :username %><br><br>
     <%= form.label :password, "Password" %><br>
     <%= form.password_field :password %><br><br>
     <%= form.submit "Login" %>
