--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,8 +4,8 @@
 
 <div class="text-center">
 <%= form_with model: @user do |form| %>
-  <%= form.label :email, 'Email' %><br>
-  <%= form.text_field :email %><br>
+  <%= form.label :username, 'Username' %><br>
+  <%= form.text_field :username %><br>
   <%= form.label :password, 'Password' %><br>
   <%= form.password_field :password %><br>
   <%= form.label :password_confirmation, 'Confirm Password' %><br>
