--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -3,18 +3,19 @@
 </div>
 
 <div class="text-center">
-  <!-- Login Form -->
-  <%= form_with url: login_path, method: :post do |form| %>
-    <%= form.label :username, "Username" %><br>
-    <%= form.text_field :username %><br><br>
-    <%= form.label :password, "Password" %><br>
-    <%= form.password_field :password %><br><br>
-    <%= form.submit "Login" %>
-  <% end %>
 
-  <%= link_to "Login with GitHub",
-  "https://github.com/login/oauth/authorize?client_id=9efeee337b5dd5eeb0dd&scope=repo" %>
 
+
+<p> Please enter your email for login link.</p>
+<!-- Passwordless Login Form -->
+<%= form_with url: login_path, method: :post do |form| %>
+  <%= form.label :email, "Email" %><br>
+  <%= form.text_field :email %><br><br>
+  <%= form.submit "Get a Magic Link" %>
+  <% end %><br><br><br>
+  
+  <p>Have a Github Account? <%= link_to "Login with Github",
+  "https://github.com/login/oauth/authorize?client_id=9efeee337b5dd5eeb0dd&scope=repo" %></p>
   <!-- Link to Create Account -->
   <br><p>Don't have an account? <%= link_to "Create Account", new_user_path %></p>
 </div>
