--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,11 @@
   <%= form.label :email, 'Email' %><br>
   <%= form.text_field :email %><br>
   <%= form.label :username, 'Username' %><br>
-  <%= form.text_field :username %><br><br>
+  <%= form.text_field :username %><br>
+  <%= form.label :password, 'Password' %><br>
+  <%= form.password_field :password %><br>
+  <%= form.label :password_confirmation, 'Confirm Password' %><br>
+  <%= form.password_field :password_confirmation %><br><br>
   <%= form.submit 'Create User' %><br><br>
 <% end %>
 
