--- a/app/views/encounters/show.html.erb
+++ b/app/views/encounters/show.html.erb
@@ -18,65 +18,35 @@
     </tr>
   </tbody>
 </table>
-<div class="d-inline-flex">
-  <div>
-    <table class="table">
-      <thead>
-        <td>P1</td>
-        <td>AVG Damage</td>
-      </thead>
-      <tbody>
-        <td>-</td>
-        <td><%= @encounter.p1_dmg %></td>
-      </tbody>
-    </table>
-  </div>
-    <div>
-    <table class="table">
-      <thead>
-        <td>P2</td>
-        <td>Avg Damage</td>
-      </thead>
-      <tbody>
-        <td>-</td>
-        <td><%= @encounter.p2_dmg %></td>
-      </tbody>
-    </table>
-  </div>
-    <div>
-    <table class="table">
-      <thead>
-        <td>P3</td>
-        <td>Avg Damage</td>
-      </thead>
-      <tbody>
-        <td>-</td>
-        <td><%= @encounter.p3_dmg %></td>
-      </tbody>
-    </table>
-  </div>
-    <div>
-    <table class="table">
-      <thead>
-        <td>P4</td>
-        <td>Avg Damage</td>
-      </thead>
-      <tbody>
-        <td>-</td>
-        <td><%= @encounter.p4_dmg %></td>
-      </tbody>
-    </table>
-  </div>
-    <div>
-    <table class="table">
-      <thead>
-        <td>P5</td>
-        <td>Avg Damage</td>
-      </thead>
-      <tbody>
-        <td>-</td>
-        <td><%= @encounter.p5_dmg %></td>
-      </tbody>
-    </table>
-  </div>
+<div style="display: flex;">
+    <div class="card" style="width: 20%;">
+      <div class="card-title"><h3>P1 Stats</h3></div>
+      <ul class="list-group list_group-flush">
+        <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p1_dmg %></li>
+      </ul>
+    </div>
+    <div class="card" style="width: 20%;">
+      <div class="card-title"><h3>P2 Stats</h3></div>
+      <ul class="list-group list_group-flush">
+        <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p2_dmg %></li>
+      </ul>
+    </div>
+    <div class="card" style="width: 20%;">
+      <div class="card-title"><h3>P3 Stats</h3></div>
+      <ul class="list-group list_group-flush">
+        <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p3_dmg %></li>
+      </ul>
+    </div>
+    <div class="card" style="width: 20%;">
+      <div class="card-title"><h3>P4 Stats</h3></div>
+      <ul class="list-group list_group-flush">
+        <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p4_dmg %></li>
+      </ul>
+    </div>
+    <div class="card" style="width: 20%;">
+      <div class="card-title"><h3>P5 Stats</h3></div>
+      <ul class="list-group list_group-flush">
+        <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p5_dmg %></li>
+      </ul>
+    </div>
 </div>
