--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -2,5 +2,5 @@
   <h1>Saved Encounters</h1>
 </div>
 <% @encounters.each do |encounter| %>
-  <%= button_to encounter, "/encounters/#{encounter}", method: :get  %>
+  <h3><%= link_to encounter.id, "/encounters/#{encounter.id}", method: :get  %></h3><br>
 <% end %>
