add metrics to the results page

--- a/app/views/encounters/show.html.erb
+++ b/app/views/encounters/show.html.erb
@@ -20,53 +20,85 @@
     </tr>
   </tbody>
 </table>
+<table class="table">
+  <thead>
+    <th scope="col">Average Rounds Per Combat</th>
+    <th scope="col">Average Rounds to Win</th>
+    <th scope="col">Average Rounds to Lose</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td><%= @encounter.avg_rounds[:avg_rounds] %></td>
+      <td><%= @encounter.avg_rounds[:avg_for_wins] %></td>
+      <td><%= @encounter.avg_rounds[:avg_for_loses] %></td>
+    </tr>
+  </tbody>
+</table>
 <div style="display: flex;">
     <div class="card" style="width: 20%;">
-      <div class="card-title"><h3>P1 Stats</h3></div>
+      <div class="card-title"><h3><%= @encounter.p1_stats[:player] %> Stats</h3></div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Avg Damage Across All Combats: <%= @encounter.p1_stats[:avg_dmg] %></li>
+        <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p1_stats[:avg_dmg] %></li>
         <li class="list-group-item">Avg Hit Rate Across All Combats: <%= @encounter.p1_stats[:hit_rate] %></li>
-        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.p1_dmg_per_combat %></li>
+        <li class="list-group-item">Best Showing: <%= @encounter.best_combat("p1") %></li>
+        <li class="list-group-item">Worst Showing: <%= @encounter.worst_combat("p1") %></li>
+        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.sim_damage("p1") %></li>
+        <li class="list-group-item">Times Killed: <%= @encounter.times_killed(@encounter.p1_stats[:player]) %></li>
       </ul>
     </div>
     <div class="card" style="width: 20%;">
-      <div class="card-title"><h3>P2 Stats</h3></div>
+      <div class="card-title"><h3><%= @encounter.p2_stats[:player] %> Stats</h3></div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p2_stats[:avg_dmg] %></li>
         <li class="list-group-item">Avg Hit Rate Across All Combats: <%= @encounter.p2_stats[:hit_rate] %></li>
-        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.p2_dmg_per_combat %></li>
+        <li class="list-group-item">Best Showing: <%= @encounter.best_combat("p2") %></li>
+        <li class="list-group-item">Worst Showing: <%= @encounter.worst_combat("p2") %></li>
+        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.sim_damage("p2") %></li>
+        <li class="list-group-item">Times Killed: <%= @encounter.times_killed(@encounter.p2_stats[:player]) %></li>
       </ul>
     </div>
     <div class="card" style="width: 20%;">
-      <div class="card-title"><h3>P3 Stats</h3></div>
+      <div class="card-title"><h3><%= @encounter.p3_stats[:player] %> Stats</h3></div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p3_stats[:avg_dmg] %></li>
         <li class="list-group-item">Avg Hit Rate Across All Combats: <%= @encounter.p3_stats[:hit_rate] %></li>
-        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.p3_dmg_per_combat %></li>
+        <li class="list-group-item">Best Showing: <%= @encounter.best_combat("p3") %></li>
+        <li class="list-group-item">Worst Showing: <%= @encounter.worst_combat("p3") %></li>
+        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.sim_damage("p3") %></li>
+        <li class="list-group-item">Times Killed: <%= @encounter.times_killed(@encounter.p3_stats[:player]) %></li>
       </ul>
     </div>
     <div class="card" style="width: 20%;">
-      <div class="card-title"><h3>P4 Stats</h3></div>
+      <div class="card-title"><h3><%= @encounter.p4_stats[:player] %> Stats</h3></div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p4_stats[:avg_dmg] %></li>
         <li class="list-group-item">Avg Hit Rate Across All Combats: <%= @encounter.p4_stats[:hit_rate] %></li>
-        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.p4_dmg_per_combat %></li>
+        <li class="list-group-item">Best Showing: <%= @encounter.best_combat("p4") %></li>
+        <li class="list-group-item">Worst Showing: <%= @encounter.worst_combat("p4") %></li>
+        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.sim_damage("p4") %></li>
+        <li class="list-group-item">Times Killed: <%= @encounter.times_killed(@encounter.p4_stats[:player]) %></li>
       </ul>
     </div>
     <div class="card" style="width: 20%;">
-      <div class="card-title"><h3>P5 Stats</h3></div>
+      <div class="card-title"><h3><%= @encounter.p5_stats[:player] %> Stats</h3></div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Avg Damage Per Round: <%= @encounter.p5_stats[:avg_dmg] %></li>
         <li class="list-group-item">Avg Hit Rate Across All Combats: <%= @encounter.p5_stats[:hit_rate] %></li>
-        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.p5_dmg_per_combat %></li>
+        <li class="list-group-item">Best Showing: <%= @encounter.best_combat("p5") %></li>
+        <li class="list-group-item">Worst Showing: <%= @encounter.worst_combat("p5") %></li>
+        <li class="list-group-item">Total Damage Across Simulation: <%= @encounter.sim_damage("p5") %></li>
+        <li class="list-group-item">Times Killed: <%= @encounter.times_killed(@encounter.p5_stats[:player]) %></li>
       </ul>
     </div>
 </div>
 
 <div class="card">
-  <h2><div class="card-title" style="text-align: center">Monster Stats</div></h2>
+  <h2><div class="card-title" style="text-align: center"><%= @encounter.monster_stats[:player] %> Stats</div></h2>
   <ul class="list-group">
-    <h3><li class="list-group-item" style="text-align: center">Average Monster Damage: <%= @encounter.monster_avg_dmg %></li></h3>
-    <h3><li class="list-group-item" style="text-align: center">Average Monster Hit Rate: <%= @encounter.monster_hit_rate %></li></h3>
+    <h3><li class="list-group-item" style="text-align: center">Average Monster Damage: <%= @encounter.monster_stats[:avg_dmg] %></li></h3>
+    <h3><li class="list-group-item" style="text-align: center">Average Monster Hit Rate: <%= @encounter.monster_stats[:hit_rate] %></li></h3>
+    <h3><li class="list-group-item" style="text-align: center">Best Showing: <%=  @encounter.best_combat("monster") %></li></h3>
+    <h3><li class="list-group-item" style="text-align: center">Worst Showing: <%= @encounter.worst_combat("monster") %></li></h3>
+    <h3><li class="list-group-item" style="text-align: center">Players Killed: <%= @encounter.total_deaths %></li></h3>
   </ul>
 </div>
